motivus-home/k8s/prod/03-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home
  name: home-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: motivus-proxy-
    networking.gke.io/managed-certificates: motivus-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: motivus.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
